--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'library.kotlin'
 
 dependencies {
-    api  "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    api  "androidx.paging:paging-common-ktx:2.1.2"
+    api  "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1"
+    api  "androidx.paging:paging-common-ktx:3.0.0-alpha07"
 }
