--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.2"
-    implementation "com.google.android.material:material:1.2.1"
+    implementation "com.google.android.material:material:1.3.0-alpha03"
 
     def navVersion = "2.3.1"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
@@ -21,8 +21,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
 
-    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha07"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0-M1"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "androidx.test:core-ktx:1.3.0"
